<resources>
    <string name="app_name">Fast Feast</string>

    <color name="white">#F0F4C3</color>

    <string name="hello_twitter">Welcome to Pay Ahead - Simplified Payments</string>
    <string name="action_settings">Settings</string>
    <string name="lbl_username">Username or Email</string>
    <string name="lbl_enter_username">Enter Username</string>
    <string name="lbl_enter_email">Enter Email ID to send email</string>
    <string name="lbl_pwd">Password</string>
    <string name="lbl_send">Send Email</string>
    <string name="lbl_enter_pwd">Enter your password</string>
    <string name="lbl_enter_qty">Enter Quantity</string>
    <string name="lbl_login">Login</string>
    <string name="title_activity_tweet_list">Send Email here...</string>
    <string name="lbl_email">Email ID</string>
    <string name="lbl_pay">Confirm Order</string>
    <string name="lbl_fb">Provide Feedback about order</string>
    <string name="conf_final">Your order has been placed</string>
    <string name="pay_msg">Please pay at the Clover terminal at Chutneys</string>
    <string name="Total">Total = $0</string>

    <string name="hello_world">Hello world!</string>
    <string name="no_tweet">No Tweets found. :|</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="title_activity_create_file">CreateFileActivity</string>
    <string name="title_activity_base_demo">BaseDemoActivity</string>
    <string name="title_activity_list_restaurants">ListRestaurants</string>
    <string name="title_activity_orderselection">Select your Order</string>
    <string name="menu_heading">Menu</string>
    <string name="title_activity_order_confirmation">Order Confirmation</string>
    <string name="title_activity_feedback">Please submit feedback</string>
</resources>
