<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.vcgadiyar.helloandroid.TweetListActivity">

    <LinearLayout android:id="@+id/email_block"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/header"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp">


        <TextView android:id="@+id/Email_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_enter_email"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:layout_gravity="center_vertical"/>

        <EditText
            android:id="@+id/fld_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/lbl_email"
            android:layout_marginLeft="8dp"
            android:inputType="textEmailAddress"
            android:paddingLeft="5dp"
            android:textSize="13sp"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_send"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_block"
        android:text="@string/lbl_send"
        android:layout_width="290dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:textSize="13sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_create"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_send"
        android:text="@string/lbl_pwd"
        android:layout_width="290dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:textSize="13sp"
        android:textStyle="bold" />

</RelativeLayout>
