<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@android:color/holo_red_light"
    tools:context="com.example.vcgadiyar.helloandroid.OrderConfirmation">

    <TextView android:text="@string/conf_final"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/conf_t"
        android:padding="10dp"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="96dp" />

     <TextView android:text="@string/pay_msg"
         android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pay_t"
        android:padding="10dp"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_below="@+id/conf_t"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/btn_feedbk"
        android:layout_height="wrap_content"
        android:text="@string/lbl_fb"
        android:layout_width="150dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:textSize="13sp"
        android:textStyle="bold"
        android:layout_below="@+id/imageView1"/>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="200px"
        android:layout_height="200px"
        android:src="@drawable/clover"
        android:layout_below="@+id/pay_t"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp" />

</RelativeLayout>
