<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@android:color/holo_red_light">

    <LinearLayout android:id="@+id/uname_block"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="56dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/btn_login">


    <TextView android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Username"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:layout_gravity="center_vertical"/>

    </LinearLayout>

    <LinearLayout android:id="@+id/pwd_block"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/fld_username"
        android:layout_alignEnd="@+id/uname_block"
        android:layout_marginTop="7dp">

    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_height="wrap_content"
        android:text="@string/lbl_login"
        android:layout_width="290dp"
        android:gravity="center"
        android:textSize="13sp"
        android:textStyle="bold"
        android:layout_below="@+id/fld_pwd"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp" />

    <EditText
        android:id="@+id/fld_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Enter Password"
        android:layout_marginLeft="8dp"
        android:inputType="textPassword"
        android:paddingLeft="5dp"
        android:textSize="18sp"
        android:textColorHint="#A9A9A9"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="24dp"
        android:layout_below="@+id/pwd_block"
        android:layout_alignStart="@+id/btn_login"
        android:layout_alignEnd="@+id/btn_login" />

    <TextView android:id="@+id/pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_pwd"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:layout_gravity="center_vertical"
        android:layout_below="@+id/pwd_block"
        android:layout_alignStart="@+id/uname_block" />

    <EditText
        android:id="@+id/fld_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/lbl_enter_username"
        android:layout_marginLeft="8dp"
        android:inputType="textEmailAddress"
        android:paddingLeft="5dp"
        android:textSize="18sp"
        android:textColorHint="#A9A9A9"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="13dp"
        android:layout_below="@+id/uname_block"
        android:layout_alignStart="@+id/pwd"
        android:layout_alignEnd="@+id/fld_pwd" />


</RelativeLayout>
